# pyviennacl-dev

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  LICENSE  MANIFEST.in  Makefile.in  README  README.dist  README.rst  aksetup_helper.py  pyversions.py  setup.py  setup.py.in
cmake/: FindNumpy.cmake  FindOpenCL.cmake  ViennaCLCommon.cmake
debian/: changelog  control  copyright  python-pyviennacl.install  python3-pyviennacl.install  pyviennacl-doc.install  rules  watch
doc/: Makefile  backend.rst  build-doc.py  conf.py  device_specific.rst  index.rst  io.rst  linalg.rst  make.bat  opencl.rst  pycore.rst  tags.rst  util.rst  vclmath.rst
doc/examples/: basics.rst  direct-solvers.rst  index.rst  iterative-solvers.rst  products.rst  slices-and-proxies.rst  sparse-matrices.rst
examples/: README  basics.py  benchmarks.py  direct-solvers.py  iterative-solvers.py  plot_benchmark.py  products.py  simple-custom-node-sum.py  simple-opencl-vector-sum.py  slices-and-proxies.py  sparse-matrices.py  test.py  util.py
pyviennacl/: __init__.py  backend.py  device_specific.py  io.py  linalg.py  opencl.py  pycore.py  pycore.py.orig  tags.py  util.py  vclmath.py  version.py
src/: _viennacl.old.cpp
src/_viennacl/: atidlas.cpp  bandwidth_reduction.cpp  bandwidth_reduction.hpp  common.hpp  compressed_compressed_matrix.cpp  compressed_compressed_matrix.hpp  compressed_matrix.cpp  compressed_matrix.hpp  coordinate_matrix.cpp  coordinate_matrix.hpp  core.cpp  cpu_compressed_matrix.cpp  cpu_compressed_matrix.hpp  cpu_sparse_matrix.cpp  cpu_sparse_matrix.hpp  dense_matrix.h  dense_matrix.hpp  dense_matrix_double.cpp  dense_matrix_float.cpp  dense_matrix_int.cpp  dense_matrix_long.cpp  dense_matrix_uint.cpp  dense_matrix_ulong.cpp  device_specific.cpp  device_specific.hpp  direct_solvers.cpp  direct_solvers.hpp  eig.cpp  ell_matrix.cpp  ell_matrix.hpp  entry_proxy.hpp  extra_functions.cpp  hyb_matrix.cpp  hyb_matrix.hpp  iterative_solvers.cpp  iterative_solvers.hpp  opencl_support.cpp  platform_support.cpp  preconditioners.cpp  preconditioners.hpp  (+21 more)
src/pyviennacl/: __init__.py
tests/: CMakeLists.txt  _common.py  blas3_prod.py  blas3_solve.py  matrix_operations.py  scalar_operations.py  test_common.py  test_direct_solvers.py  test_iterative_solvers.py  test_matrix_operations.py  test_scalar_operations.py  test_sparse_matrix_operations.py  test_vector_operations.py  vector_operations.py
